--- a/c4beta.cabal
+++ b/c4beta.cabal
@@ -20,6 +20,7 @@ library
                      , language-c >= 0.4.7
                      , language-c >= 0.4.7
                      , pretty >= 1.1.2.0
+                     , transformers >= 0.4.2.0
   default-language:    Haskell2010
 
 executable c4beta-exe
@@ -31,6 +32,7 @@ executable c4beta-exe
                      , language-c >= 0.4.7
                      , language-c >= 0.4.7
                      , pretty >= 1.1.2.0
+                     , transformers >= 0.4.2.0
   default-language:    Haskell2010
 
 test-suite c4beta-test
@@ -42,6 +44,7 @@ test-suite c4beta-test
                      , language-c >= 0.4.7
                      , language-c >= 0.4.7
                      , pretty >= 1.1.2.0
+                     , transformers >= 0.4.2.0
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
