--- a/c4beta.cabal
+++ b/c4beta.cabal
@@ -19,6 +19,7 @@ library
                      , Types
                      , RegPool
   build-depends:       base >= 4.7 && < 5
+                     , betacpu >= 0.1.0.0
                      , language-c >= 0.4.7
                      , language-c >= 0.4.7
                      , pretty >= 1.1.2.0
