--- a/stack.yaml
+++ b/stack.yaml
@@ -1,14 +1,17 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/release/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-5.17
+resolver: lts-7.7
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- '../betacpu'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps: 
+- cabal-0.0.0.0
+- betacpu-0.1.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
