--- a/c4beta.cabal
+++ b/c4beta.cabal
@@ -19,6 +19,8 @@ library
                      , Types
                      , RegPool
   build-depends:       base >= 4.7 && < 5
+                     , mtl >= 2.2.1
+                     , containers >= 0.5.7.1
                      , betacpu >= 0.1.0.0
                      , language-c >= 0.4.7
                      , language-c >= 0.4.7
